--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,25 @@
 {
   "name": "api",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
-    "mongoose": "^5.12.4"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.4",
+    "uuid": "^8.3.2"
+  },
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon index.js"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7"
   }
 }
