Adding JWT token 🎉

--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,3 @@
 PORT=8090
 MONGO_LOCAL_CONN_URL=mongodb+srv://friendshit_developer:psALWgaph7aW98RN@friendshit.cyyhu.mongodb.net/friendshit?retryWrites=true&w=majority
+JWT_SECRET=hG3fg3eQYAmjzycCtcDBclHyiL6G8MeWUBnPahIjJyU
