--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.js"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
