--- a/api/.babelrc
+++ b/api/.babelrc
@@ -9,5 +9,15 @@
       }
     ]
   ],
-  "plugins": ["babel-plugin-add-import-extension"]
+  "plugins": [
+    "babel-plugin-add-import-extension",
+    [
+      "module-resolver",
+      {
+        "alias": {
+          "$logging": "./src/logger"
+        }
+      }
+    ]
+  ]
 }
