--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -14,11 +15,16 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.2.6",
+    "express-winston": "^4.1.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "mongoose": "^5.12.4",
     "npm-run-all": "^4.1.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5",
+    "winston-timestamp-colorize": "^1.1.0"
   },
   "scripts": {
     "start": "node src/index.js",
@@ -34,8 +40,10 @@
     "@babel/preset-env": "^7.14.2",
     "babel-plugin-add-import-extension": "^1.5.1",
     "cross-env": "^7.0.3",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2"
+  },
+  "_moduleAliases": {
+    "$logging": "src/logger"
   }
 }
