--- a/api/.babelrc
+++ b/api/.babelrc
@@ -15,7 +15,8 @@
       "module-resolver",
       {
         "alias": {
-          "$logging": "./src/logger"
+          "$logging": "./src/logger",
+          "$root": "./src"
         }
       }
     ]
